<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_transformer"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/et_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:minWidth="100dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/tvName"
        app:layout_constraintStart_toEndOf="@id/tvName"
        app:layout_constraintTop_toTopOf="@id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTeam"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/team"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <Spinner
        android:id="@+id/teams_spn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/tvTeam"
        app:layout_constraintStart_toEndOf="@id/tvTeam"
        app:layout_constraintTop_toTopOf="@id/tvTeam" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStrength"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/strength"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTeam" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/num_str"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:progress="4"
        android:max="9"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintStart_toEndOf="@id/tvStrength"
        app:layout_constraintTop_toTopOf="@id/tvStrength"
        app:layout_constraintBottom_toBottomOf="@id/tvStrength"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIntelligence"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/intelligence"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStrength" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/num_int"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:progress="4"
        android:max="9"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintStart_toEndOf="@id/tvIntelligence"
        app:layout_constraintTop_toTopOf="@id/tvIntelligence"
        app:layout_constraintBottom_toBottomOf="@id/tvIntelligence"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSpeed"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/speed"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIntelligence" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/num_spd"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:progress="4"
        android:max="9"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintStart_toEndOf="@id/tvSpeed"
        app:layout_constraintTop_toTopOf="@id/tvSpeed"
        app:layout_constraintBottom_toBottomOf="@id/tvSpeed"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEndurance"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/endurance"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSpeed" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/num_end"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:progress="4"
        android:max="9"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintStart_toEndOf="@id/tvEndurance"
        app:layout_constraintTop_toTopOf="@id/tvEndurance"
        app:layout_constraintBottom_toBottomOf="@id/tvEndurance"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRank"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/rank"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEndurance" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/num_rnk"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:progress="4"
        android:max="9"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintStart_toEndOf="@id/tvRank"
        app:layout_constraintTop_toTopOf="@id/tvRank"
        app:layout_constraintBottom_toBottomOf="@id/tvRank"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCourage"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/courage"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRank" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/num_crg"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:progress="4"
        android:max="9"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintStart_toEndOf="@id/tvCourage"
        app:layout_constraintTop_toTopOf="@id/tvCourage"
        app:layout_constraintBottom_toBottomOf="@id/tvCourage"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirepower"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/firepower"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCourage" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/num_fpw"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:progress="4"
        android:max="9"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintStart_toEndOf="@id/tvFirepower"
        app:layout_constraintTop_toTopOf="@id/tvFirepower"
        app:layout_constraintBottom_toBottomOf="@id/tvFirepower"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSkill"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/skill"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFirepower" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/num_skl"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:progress="4"
        android:max="9"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        app:layout_constraintStart_toEndOf="@id/tvSkill"
        app:layout_constraintTop_toTopOf="@id/tvSkill"
        app:layout_constraintBottom_toBottomOf="@id/tvSkill"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSkill" />


</androidx.constraintlayout.widget.ConstraintLayout>